--- a/src/main/webapp/partials/Materia.html
+++ b/src/main/webapp/partials/Materia.html
@@ -1,28 +1,48 @@
-
-
 <div class="panel panel-primary" ng-hide="panelEditar">
     <div class="panel-heading">Parametrizaci&oacute;n de Materia</div>
     <div class="panel-body">
         <div class="btn-group">
-            <button type="button" class="btn btn-default" ng-click="nuevo()">Nueva Materia</button>
+            <button type="button" class="btn btn-default" ng-click="nuevo()">
+                Nueva Materia</button>
         </div>
+        <br>
+        <br>
         <table class="resultados table table-striped">
             <tr>
                 <th>
-                    nombre
+                    Nombre
                 </th>
                 <th>
-                    creditos
+                    Creditos
                 </th>
-                <th>Horario</th>
                 <th>
+                    Carrera
+                </th>
+                <th>
+                    Profesor/a
+                </th>
+                <th>
+                    Horarios
+                </th>
+                <th>
+                    Opciones
                 </th>
             </tr>
             <tr ng-repeat="row in lista">
                 <td>{{row.nombre}}</td>
-                <td class="row">{{row.creditos}}</td>
-                <!--<td class="row">{{row.hoario+dia + "Hora Inicio: "+horaInicio| date:"hh:mm a"+"Hora Final:" + horaFinal| date:"hh:mm a"}}</td>-->
-                <td class="row">{{row.horario.dia+' Hora Inicio:'+row.horario.horaInicio+' Hora Final: '+row.horario.horaFin}}</td>
+                <td>{{row.creditos}}</td>
+                <td class="row">{{row.carrera.nombre}}</td>
+                <td class="row">{{row.profesor.nombre}}</td>
+                <td class="row">
+                    <ul>
+                        <li ng-repeat="rowHorario in row.horario">
+                            {{rowHorario.dia}}
+                            {{rowHorario.horaInicio | date:'h:mma'}}
+                            {{rowHorario.horaFin | date:'h:mma'}}
+                        </li>
+                    </ul>
+                    
+                </td>
                 <td class="row">
                     <button type="button" class="btn btn-default" ng-click="editar(row)">
                         <span class="glyphicon glyphicon-pencil"></span>Editar
@@ -30,7 +50,6 @@
                     <button type="button" class="btn btn-default" ng-click="eliminar(row)">
                         <span class="glyphicon glyphicon-remove"></span>Eliminar
                     </button>
-                    
                 </td>
             </tr>
         </table>
@@ -43,104 +62,116 @@
     <div class="panel-body">
 
         <div class="form-group col-md-6" ng-class="errores.nombre ? 'error' : ''">
-            <label for="nombre">nombre</label>
+            <label for="nombre">Nombre</label>
             <input id="nombre" 
                    class="form-control" 
                    type="text"
                    ng-model="datosMateria.nombre"
-                   placeholder="nombre"/>
+                   placeholder="Nombre"/>
+            <label for="creditos">Creditos</label>
+            <input id="creditos" 
+                   class="form-control" 
+                   type="number"
+                   ng-model="datosMateria.creditos"
+                   placeholder="Creditos"/>
+            <label>Carrera</label>
+            <select id="carrera" class="form-control" 
+                        ng-model="datosMateria.carrera"
+                        ng-options="option.nombre for option in listaCarrera track by option.id">
+            </select>
+            <label>Profesor/a</label>
+                <select id="carrera" class="form-control" 
+                        ng-model="datosMateria.profesor"
+                        ng-options="option.nombre for option in listaProfesor track by option.id">
+                </select>
             <div ng-show="errores.nombre">{{errores.nombre}}</div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-6" ng-class="errores.credito ? 'error' : ''">
-                <label>credito</label>
-                <input id="credito" 
-                       class="form-control" 
-                       type="number"
-                       min="0"
-                       ng-model="datosMateria.credito"
-                       placeholder="credito"/>
-                <div ng-show="errores.credito">{{errores.credito}}</div>
+            <br>
+            <div class="btn-group">
+                <button type="button" class="btn btn-default" ng-click="guardar()">Aceptar</button>
+                <button type="button" class="btn btn-default" ng-click="cancelar()">Cancelar</button>
             </div>
+        </div> 
+        <div class="form-group col-md-6" ng-class="errores.nombre ? 'error' : ''">
+            <table class="table table-striped">
+                <tr>
+                    <th>
+                        Día
+                    </th>
+                    <th>
+                        Hora inicio
+                    </th>
+                    <th>
+                        Hora fin
+                    </th>
+                    <th>
+                        Eliminar
+                    </th>
+                </tr>
+                <tr ng-repeat="row in datosMateria.horario">
+                    <td>{{row.dia}}</td>
+                    <td>{{row.horaInicio | date:'h:mma'}}</td>
+                    <td>{{row.horaFin | date:'h:mma'}}</td>
+                    <td>
+                        <button type="button" class="btn btn-default" 
+                                ng-click="eliminarHorario(row)">
+                            <span class="glyphicon glyphicon-remove"></span>Eliminar
+                        </button>
+                    </td>
+                </tr>
+            </table>
+            <button type="button" class="btn btn-default"  ng-click="nuevoHorario()">Nuevo horario</button>
         </div>
         
- <table class="resultados table table-striped">
-            <tr>
-                <th>
-                    Dia
-                </th>
-                <th>
-                    Hora de Inicio
-                </th>
-                <th>
-                    Hora de Fin
-                </th>
-                <th>
-                </th>
-            </tr>
-            <tr ng-repeat="row in listaHorario">
-                <td>{{row.dia}}</td>
-                <td class="row" >{{row.horaInicio | date:"hh:mm a"}}</td>
-                <td class="row">{{row.horaFinal| date:"hh:mm a"}}</td>
-                <td class="row">
-                    <button type="button" class="btn btn-default" ng-click="editar(row)">
-                        <span class="glyphicon glyphicon-pencil"></span>Editar
-                    </button>
-                    <button type="button" class="btn btn-default" ng-click="eliminar(row)">
-                        <span class="glyphicon glyphicon-remove"></span>Eliminar
-                    </button>
-                </td>
-            </tr>
-        </table>
-        <div class="form-group col-md-6" ng-class="errores.dia ? 'error' : ''">
-            <label for="dia">dia</label>
-            <select id="dia" 
-                   class="form-control" 
-                   ng-model="datosHorario.dia"
-                   placeholder="dia"
-                >
-                <option value="">--Seleccione el dia--</option>
-                <option>Lunes</option>
-                <option>Martes</option>
-                <option>Miércoles</option>
-                <option>Jueves</option>
-                <option>Viernes</option>
-                <option>Sábado</option>
-                <option>Domingo</option>
-            </select>
-            <div ng-show="errores.dia">{{errores.dia}}</div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-6" ng-class="errores.horaInicio ? 'error' : ''">
-                <label>Hora inicio</label>
-                <input id="horaInicio " 
+
+        <!-- Modal -->
+        <div class="modal fade" id="modalHorario" role="dialog">
+          <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Horarios</h4>
+              </div>
+              <div class="modal-body">
+                
+                <label for="dia">Día:</label>
+                <select id="dia" class="form-control" ng-model="datosHorario.dia" >
+                    <option value="1">Lunes</option>
+                    <option value="2">Martes</option>
+                    <option value="3">Miercoles</option>
+                    <option value="4">Jueves</option>
+                    <option value="5">Viernes</option>
+                    <option value="6">Sábado</option>
+                    <option value="7">Domingo</option>
+                    
+                </select>
+                
+                <label for="horaInicio">Hora inicio:</label>
+                <input id="horaInicio" 
                        class="form-control" 
                        type="time"
                        ng-model="datosHorario.horaInicio"
-                       />
-                <div ng-show="errores.horaInicio">{{errores.horaInicio}}</div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="form-group col-md-6" ng-class="errores.horaFinal ? 'error' : ''">
-                <label>Hora Final</label>
-                <input id="horaFinal" 
+                       placeholder="hora inicio"/>
+                <label for="horaFin">Hora fin:</label>
+                <input id="horaFin" 
                        class="form-control" 
                        type="time"
-                  
-                        ng-model="datosHorario.horaFinal"                  
-                    />
-                <div ng-show="errores.horaFinal">{{errores.horaFinal}}</div>
+                       ng-model="datosHorario.horaFin"
+                       placeholder="hora fin"/>
+                 
+              </div>
+              <div class="modal-footer">
+                  <button type="button" class="btn btn-default" ng-click="guardarHorario()">Guardar</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+              </div>
             </div>
+
+          </div>
         </div>
-
-       
-
-        <div class="btn-group">
+        
+        
+        
             
-            <button type="button" class="btn btn-default" ng-click="guardar()">Aceptar</button>
-            <button type="button" class="btn btn-default" ng-click="cancelar()">Cancelar</button>
-        </div>    
     </div>
 </div>
-
